--- a/src/style/generic.scss
+++ b/src/style/generic.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body, button, select{
+body, button, select, input{
     font-family: "Montserrat", sans-serif;
 }
 
